--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -104,7 +104,7 @@ body {
   top: 0vh;
   right: 1.6vh;
   z-index: 5;
-  background-color: rgba(211, 211, 211, 0.5);
+  background-color: rgb(0, 0, 0);
   border-radius: 50%;
   border: 0.3vh solid orange;
   box-shadow: 0 1vh 1vh black;
@@ -522,7 +522,7 @@ body {
 
   box-shadow: 0 0 1vw rgba(0, 0, 0, 0.719);
   width: 8vh;
-  height: 95vh;
+  height: 85%;
   z-index: 4;
 
   align-items: center;
