--- a/sass/utils/_keyframes.scss
+++ b/sass/utils/_keyframes.scss
@@ -104,9 +104,10 @@
     top: 0vh;
   }
   100% {
-    top: -88vh;
-    z-index: 5;
+    top: -67vh;
+    z-index: 3;
     background-color: white;
+    border-radius:10vw;
   }
 }
 
